--- a/shared/main.scss
+++ b/shared/main.scss
@@ -9,10 +9,6 @@
 }
 
 .fdt-login-form {
-    position: absolute;
-    margin-top: 50%;
-    margin-left: 50%;
-    transform: translate(-50%, -50%);
     background-color: #d1d1d1;
     padding: 20px;
 
@@ -20,4 +16,19 @@
         margin-bottom: 16px;
         display: block;
     }
+}
+
+.fdt-row {
+    width: 100%;
+}
+
+.fdt-col {
+    width: 30%;
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    background-color: #d1d1d1;
+    text-decoration: none;
+    color: black;
+    word-break: break-word;
 }
